05_istio/wordpress/wordpress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wordpress-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - wordpress.c0.kube8.ga
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - wordpress.c0.kube8.ga
    tls:
      credentialName: ingress-cert
      mode: SIMPLE
      privateKey: sds
      serverCertificate: sds
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wordpress
spec:
  hosts:
  - wordpress.c0.kube8.ga
  gateways:
  - wordpress-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: wordpress
        port:
          number: 80
